<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:title="@string/app_name" />


    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/twitterLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="accTw"
        app:layout_constraintBottom_toBottomOf="@+id/wwwLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wwwLogo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/wwwLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="accWeb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/twitterLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        app:srcCompat="@drawable/web" />

    <ImageView
        android:id="@+id/facebookLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="accFb"
        app:layout_constraintBottom_toBottomOf="@+id/twitterLogo"
        app:layout_constraintEnd_toStartOf="@+id/twitterLogo"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twitterLogo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="342dp"
        android:layout_height="147dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/areaContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/selectArea"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <ImageView
        android:id="@+id/areaEmpleadosAcceso"
        android:layout_width="168dp"
        android:layout_height="172dp"
        android:onClick="lanzarLogin"
        app:layout_constraintBottom_toBottomOf="@+id/areaClientesAcceso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/areaClientesAcceso"
        app:layout_constraintTop_toTopOf="@+id/areaClientesAcceso"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/areadeempleados" />

    <Button
        android:id="@+id/buttonAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:onClick="lanzarAcercaDe"
        android:text="@string/acercaDeBoton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/areaClientesAcceso"
        android:layout_width="168dp"
        android:layout_height="172dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="352dp"
        android:onClick="lanzarContacto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/areadeclientes" />

</androidx.constraintlayout.widget.ConstraintLayout>